# gst-plugin-projectm

./: CMakeLists.txt
cmake/: FindGStreamer.cmake
